# languagetag

.github/workflows/: haskell-ci.yml
languagetag-bcp47/: languagetag-bcp47.cabal
languagetag-bcp47-dynamic/: languagetag-bcp47-dynamic.cabal
languagetag-bcp47-subtag/: languagetag-bcp47-subtag.cabal
languagetag-bcp47-syntax/: languagetag-bcp47-syntax.cabal
languagetag-bcp47-syntax/src/LanguageTag/Internal/BCP47/LegacyTag/: Grandfathered.hs  Redundant.hs
languagetag-bcp47/src/LanguageTag/Internal/BCP47/Registry/: Date.hs  Extlang.hs  ExtlangRecords.hs  Language.hs  LanguageRecords.hs  Region.hs  Script.hs  ScriptRecords.hs  Variant.hs  VariantRecords.hs
languagetag-gen/: languagetag-gen.cabal
