cabal-version: 2.4
name:          languagetag-bcp47-dynamic
version:       0.1.0
synopsis:      BCP47 language tag parsing and analysis with a dynamic registry
bug-reports:   https://github.com/despresc/languagetag/issues
license:       BSD-2-Clause
license-file:  LICENSE
author:        Christian Despres
maintainer:    christian.j.j.despres@gmail.com
copyright:     Copyright 2021 Christian Despres
category:      Text
description:
  This library provides tools for parsing and analyzing [BCP47 language
  tags](https://tools.ietf.org/html/bcp47) and their components using a
  runtime-loaded version of the IANA Language Subtag Registry, available from
  <https://www.iana.org/assignments/language-subtag-registry/language-subtag-registry>.
tested-with:
  GHC ==8.6.5 || ==8.8.4 || ==8.10.7 || ==9.0.2 || ==9.2.8 || ==9.4.8 || ==9.8.4 || ==9.10.1 || ==9.12.1

extra-source-files:
  CHANGELOG.md
  README.md

library
  hs-source-dirs: src
  default-language: Haskell2010
  build-depends:
    base >= 4.12 && < 4.22,
    bytestring >= 0.10.8.0 && < 0.13,
    containers >= 0.6.0.1 && < 0.8,
    deepseq >= 1.4.4.0 && < 1.6,
    hashable >= 1.2.7.0 && < 1.6,
    template-haskell >= 2.14.0.0 && < 2.24,
    text >= 1.2.3.0 && < 2.2,
    time >= 1.6 && < 1.15,
    vector >= 0.12.0.1 && < 0.14,
    languagetag-bcp47-subtag >= 0.1 && < 0.2,
    languagetag-bcp47-syntax >= 0.1 && < 0.2
  ghc-options: -Wall
  exposed-modules:
    LanguageTag.BCP47.Dynamic
    LanguageTag.BCP47.Dynamic.RecordJar
    LanguageTag.BCP47.Dynamic.Registry
